temporary dark mode button colour fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -664,6 +664,15 @@ section[data-background] a:hover {
 		--light-38: rgba(0, 0, 0, 0.38);
 		--light-24: rgba(0, 0, 0, 0.24);
 	}
+
+	.button[data-background] {
+		background: var(--white-24);
+		color: var(--white-100);
+	}
+
+	.button[data-background]:hover {
+		background: var(--white-38);
+	}
 }
 
 /* responsive */
